--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
           <div class="col-3 col-md-3">
             <div class="logo-wrapper">
               <a href="index.html">
-                <img src="assets/img/logo.png" width="150" alt="" />
+                <img src="assets/img/logo.png" alt="" width="150" />
               </a>
             </div>
           </div>
@@ -95,23 +95,23 @@
                 </label>
                 <ul id="dfoodyMenu" class="sm sm-simple dfoody-menu">
                   <li>
-                    <a href="index.html">Home</a>
+                    <a style="text-align: center;color: white;" href="index.html">Home</a>
                   </li>
-                  <li><a href="about.html">About</a></li>
+                  <li><a style="text-align: center;color: white;" href="about.html">About</a></li>
                   <li>
                     <!-- <a href="reservation.html">Reservation</a> -->
                   </li>
                   <li>
-                    <a href="foodmenu.html">Menu</a>
+                    <a style="text-align: center;color: white;" href="foodmenu.html">Menu</a>
                   </li>
                   <li>
-                    <a href="gallery-1.html">Gallery</a>
+                    <a style="text-align: center;color: white;" href="gallery-1.html">Gallery</a>
                   </li>
                   <li>
-                    <a href="contact.html">Contact</a>
+                    <a style="text-align: center;color: white;" href="contact.html">Contact</a>
                   </li>
                   <li>
-                    <a class="btn btn-primary" href="tel:+12093198189" role="button">Order Now</a>
+                    <a class="btn" style="background-color: #f14668;color: white;margin: 0 20px;" href="tel:+12093198189" role="button">Order Now</a>
                   </li>
                 </ul>
               </div>
@@ -145,43 +145,43 @@
                       </div> -->
               <!--end shopping-cart-header -->
 
-              <!--  <ul class="shopping-cart-items">
-                <li>
-                  <img src="assets/img/food-menu/mpfood-1.jpg" alt="" />
-                  <span class="item-name">XMREDTREE</span>
+              <!-- <ul class="shopping-cart-items">
+                        <li>
+                          <img src="assets/img/food-menu/mpfood-1.jpg" alt="" />
+                          <span class="item-name">XMREDTREE</span>
 
-                  <span class="item-price">$49.50</span>
-                  <span class="item-quantity">Quantity: 01</span>
-                  <span class="cartProduct-remove">
-                    <i class="fa fa-times" aria-hidden="true"></i>
-                  </span>
-                </li>
+                          <span class="item-price">$49.50</span>
+                          <span class="item-quantity">Quantity: 01</span>
+                          <span class="cartProduct-remove">
+                            <i class="fa fa-times" aria-hidden="true"></i>
+                          </span>
+                        </li>
 
-                <li>
-                  <img src="assets/img/food-menu/mpfood-2.jpg" alt="" />
-                  <span class="item-name">XMWHREIN</span>
+                        <li>
+                          <img src="assets/img/food-menu/mpfood-2.jpg" alt="" />
+                          <span class="item-name">XMWHREIN</span>
 
-                  <span class="item-price">$34.06</span>
-                  <span class="item-quantity">Quantity: 10</span>
-                  <span class="cartProduct-remove">
-                    <i class="fa fa-times" aria-hidden="true"></i>
-                  </span>
-                </li>
+                          <span class="item-price">$34.06</span>
+                          <span class="item-quantity">Quantity: 10</span>
+                          <span class="cartProduct-remove">
+                            <i class="fa fa-times" aria-hidden="true"></i>
+                          </span>
+                        </li>
 
-                <li>
-                  <img src="assets/img/food-menu/mpfood-3.jpg" alt="" />
-                  <span class="item-name">XMJBRR</span>
+                        <li>
+                          <img src="assets/img/food-menu/mpfood-3.jpg" alt="" />
+                          <span class="item-name">XMJBRR</span>
 
-                  <span class="item-price">$14.21</span>
-                  <span class="item-quantity">Quantity: 5</span>
-                  <span class="cartProduct-remove">
-                    <i class="fa fa-times" aria-hidden="true"></i>
-                  </span>
-                </li>
-              </ul> 
+                          <span class="item-price">$14.21</span>
+                          <span class="item-quantity">Quantity: 5</span>
+                          <span class="cartProduct-remove">
+                            <i class="fa fa-times" aria-hidden="true"></i>
+                          </span>
+                        </li>
+                      </ul>
 
-              <a href="#" class="button">Checkout</a>
-            </div> -->
+                      <a href="#" class="button">Checkout</a>
+                    </div> -->
               <!--end shopping-cart -->
               </li>
               </ul>
