--- a/gallery-1.html
+++ b/gallery-1.html
@@ -86,27 +86,25 @@
                   <span class="dfoodyMenu-btn-icon"></span>
                 </label>
                 <ul id="dfoodyMenu" class="sm sm-simple dfoody-menu">
-                  <!-- <a href="reservation.html">Reservation</a> -->
                   <li>
-                    <a href="index.html">Home</a>
+                    <a style="text-align: center;color: white;" href="index.html">Home</a>
                   </li>
-                  <li><a href="about.html">About</a></li>
+                  <li><a style="text-align: center;color: white;" href="about.html">About</a></li>
                   <li>
                     <!-- <a href="reservation.html">Reservation</a> -->
                   </li>
                   <li>
-                    <a href="foodmenu.html">Menu</a>
+                    <a style="text-align: center;color: white;" href="foodmenu.html">Menu</a>
                   </li>
                   <li>
-                    <a href="gallery-1.html">Gallery</a>
+                    <a style="text-align: center;color: white;" href="gallery-1.html">Gallery</a>
                   </li>
                   <li>
-                    <a href="contact.html">Contact</a>
+                    <a style="text-align: center;color: white;" href="contact.html">Contact</a>
                   </li>
                   <li>
-                    <a class="btn btn-primary" href="tel:+12093198189" role="button">Order Now</a>
+                    <a class="btn" style="background-color: #f14668;color: white;margin: 0 20px;" href="tel:+12093198189" role="button">Order Now</a>
                   </li>
-
                 </ul>
               </div>
               <!-- <div class="mt-icons">
