--- a/index.html
+++ b/index.html
@@ -160,13 +160,11 @@
                     <a style="text-align: center;" href="contact.html">Contact</a>
                   </li>
                   <li>
-                    <a class="btn" style="background-color: #f14668;color: white;margin: 0 20px;" href="tel:+12093198189" role="button">Order Now</a>
+                    <a class="btn" style="background-color: #f14668;color: white;margin: 0 20px;"
+                      href="tel:+12093198189" role="button">Order Now</a>
                   </li>
                 </ul>
-<<<<<<< HEAD
 
-=======
->>>>>>> 9ebaafe8385e5a65c4bd19803f55bb2b7fd4900c
               </div>
               <!-- <div class="mt-icons">
                 <ul class="mti-list">
