changed color of nav links

--- a/contact.html
+++ b/contact.html
@@ -71,6 +71,11 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <style>
+      #dfoodyMenu > li > a {
+        color: #f14668;
+      }
+    </style>
   </head>
 
   <body>
@@ -91,8 +96,11 @@
             <div class="col-9 col-md-9">
               <div class="gm-box">
                 <div class="gmb-contact">
-                  <p>
-                    Call Now: <a href="tel:+12093198189">+1(209) 319-8189</a>
+                  <p style="color: #f14668">
+                    Call Now:
+                    <a style="color: #f14668" href="tel:+12093198189"
+                      >+1(209) 319-8189</a
+                    >
                   </p>
                 </div>
                 <div class="dfoody-menu-wrapper">
@@ -103,40 +111,26 @@
                   </label>
                   <ul id="dfoodyMenu" class="sm sm-simple dfoody-menu">
                     <li>
-                      <a
-                        style="text-align: center; color: white"
-                        href="index.html"
-                        >Home</a
-                      >
+                      <a style="text-align: center" href="index.html">Home</a>
                     </li>
                     <li>
-                      <a
-                        style="text-align: center; color: white"
-                        href="about.html"
-                        >About</a
-                      >
+                      <a style="text-align: center" href="about.html">About</a>
                     </li>
                     <li>
                       <!-- <a href="reservation.html">Reservation</a> -->
                     </li>
                     <li>
-                      <a
-                        style="text-align: center; color: white"
-                        href="foodmenu.html"
+                      <a style="text-align: center" href="foodmenu.html"
                         >Menu</a
                       >
                     </li>
                     <li>
-                      <a
-                        style="text-align: center; color: white"
-                        href="gallery-1.html"
+                      <a style="text-align: center" href="gallery-1.html"
                         >Gallery</a
                       >
                     </li>
                     <li>
-                      <a
-                        style="text-align: center; color: white"
-                        href="contact.html"
+                      <a style="text-align: center" href="contact.html"
                         >Contact</a
                       >
                     </li>
