--- a/about.html
+++ b/about.html
@@ -65,27 +65,32 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <style>
+      #dfoodyMenu > li > a {
+        color: #f14668;
+      }
+    </style>
 </head>
 
 <body>
   <!-- <div id="preloader"></div> -->
 
   <!-- Header Area -->
-  <header class="header-area dfoody-header dfdV2 ipHeader">
-    <div class="dfoody-header-box">
+  <header  class="header-area dfoody-header dfdV2">
+    <div class="dfoody-header-box" style="padding: 0;">
       <div class="container">
         <div class="row">
           <div class="col-3 col-md-3">
             <div class="logo-wrapper">
               <a href="index.html">
-                <img src="assets/img/logo.png" alt="" width="150" />
+                <img src="assets/img/logo.png" alt="" width="200" />
               </a>
             </div>
           </div>
           <div class="col-9 col-md-9">
             <div class="gm-box">
               <div class="gmb-contact">
-                <p>Call Now: <a href="tel:+12093198189">+1(209) 319-8189</a></p>
+                <p style="color: #f14668;">Call Now: <a style="color: #f14668;" href="tel:+12093198189">+1(209) 319-8189</a></p>
               </div>
               <div class="dfoody-menu-wrapper">
                 <!-- Mobile menu toggle button (hamburger/x icon) -->
@@ -95,20 +100,20 @@
                 </label>
                 <ul id="dfoodyMenu" class="sm sm-simple dfoody-menu">
                   <li>
-                    <a style="text-align: center;color: white;" href="index.html">Home</a>
+                    <a style="text-align: center;" href="index.html">Home</a>
                   </li>
-                  <li><a style="text-align: center;color: white;" href="about.html">About</a></li>
+                  <li><a style="text-align: center;" href="about.html">About</a></li>
                   <li>
                     <!-- <a href="reservation.html">Reservation</a> -->
                   </li>
                   <li>
-                    <a style="text-align: center;color: white;" href="foodmenu.html">Menu</a>
+                    <a style="text-align: center;" href="foodmenu.html">Menu</a>
                   </li>
                   <li>
-                    <a style="text-align: center;color: white;" href="gallery-1.html">Gallery</a>
+                    <a style="text-align: center;" href="gallery-1.html">Gallery</a>
                   </li>
                   <li>
-                    <a style="text-align: center;color: white;" href="contact.html">Contact</a>
+                    <a style="text-align: center;" href="contact.html">Contact</a>
                   </li>
                   <li>
                     <a class="btn" style="background-color: #f14668;color: white;margin: 0 20px;" href="tel:+12093198189" role="button">Order Now</a>
@@ -146,42 +151,42 @@
               <!--end shopping-cart-header -->
 
               <!-- <ul class="shopping-cart-items">
-                        <li>
-                          <img src="assets/img/food-menu/mpfood-1.jpg" alt="" />
-                          <span class="item-name">XMREDTREE</span>
+                <li>
+                  <img src="assets/img/food-menu/mpfood-1.jpg" alt="" />
+                  <span class="item-name">XMREDTREE</span>
 
-                          <span class="item-price">$49.50</span>
-                          <span class="item-quantity">Quantity: 01</span>
-                          <span class="cartProduct-remove">
-                            <i class="fa fa-times" aria-hidden="true"></i>
-                          </span>
-                        </li>
+                  <span class="item-price">$49.50</span>
+                  <span class="item-quantity">Quantity: 01</span>
+                  <span class="cartProduct-remove">
+                    <i class="fa fa-times" aria-hidden="true"></i>
+                  </span>
+                </li>
 
-                        <li>
-                          <img src="assets/img/food-menu/mpfood-2.jpg" alt="" />
-                          <span class="item-name">XMWHREIN</span>
+                <li>
+                  <img src="assets/img/food-menu/mpfood-2.jpg" alt="" />
+                  <span class="item-name">XMWHREIN</span>
 
-                          <span class="item-price">$34.06</span>
-                          <span class="item-quantity">Quantity: 10</span>
-                          <span class="cartProduct-remove">
-                            <i class="fa fa-times" aria-hidden="true"></i>
-                          </span>
-                        </li>
+                  <span class="item-price">$34.06</span>
+                  <span class="item-quantity">Quantity: 10</span>
+                  <span class="cartProduct-remove">
+                    <i class="fa fa-times" aria-hidden="true"></i>
+                  </span>
+                </li>
 
-                        <li>
-                          <img src="assets/img/food-menu/mpfood-3.jpg" alt="" />
-                          <span class="item-name">XMJBRR</span>
+                <li>
+                  <img src="assets/img/food-menu/mpfood-3.jpg" alt="" />
+                  <span class="item-name">XMJBRR</span>
 
-                          <span class="item-price">$14.21</span>
-                          <span class="item-quantity">Quantity: 5</span>
-                          <span class="cartProduct-remove">
-                            <i class="fa fa-times" aria-hidden="true"></i>
-                          </span>
-                        </li>
-                      </ul>
+                  <span class="item-price">$14.21</span>
+                  <span class="item-quantity">Quantity: 5</span>
+                  <span class="cartProduct-remove">
+                    <i class="fa fa-times" aria-hidden="true"></i>
+                  </span>
+                </li>
+              </ul>
 
-                      <a href="#" class="button">Checkout</a>
-                    </div> -->
+              <a href="#" class="button">Checkout</a>
+            </div> -->
               <!--end shopping-cart -->
               </li>
               </ul>
