--- a/gallery-1.html
+++ b/gallery-1.html
@@ -57,6 +57,11 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <style>
+      #dfoodyMenu > li > a {
+        color: #f14668;
+      }
+    </style>
 </head>
 
 <body>
@@ -77,7 +82,7 @@
           <div class="col-9 col-md-9">
             <div class="gm-box">
               <div class="gmb-contact">
-                <p>Call Now: <a href="tel:+12093198189">+1(209) 319-8189</a></p>
+                <p style="color: #f14668;">Call Now: <a style="color: #f14668;" href="tel:+12093198189">+1(209) 319-8189</a></p>
               </div>
               <div class="dfoody-menu-wrapper">
                 <!-- Mobile menu toggle button (hamburger/x icon) -->
@@ -87,20 +92,20 @@
                 </label>
                 <ul id="dfoodyMenu" class="sm sm-simple dfoody-menu">
                   <li>
-                    <a style="text-align: center;color: white;" href="index.html">Home</a>
+                    <a style="text-align: center;" href="index.html">Home</a>
                   </li>
-                  <li><a style="text-align: center;color: white;" href="about.html">About</a></li>
+                  <li><a style="text-align: center;" href="about.html">About</a></li>
                   <li>
                     <!-- <a href="reservation.html">Reservation</a> -->
                   </li>
                   <li>
-                    <a style="text-align: center;color: white;" href="foodmenu.html">Menu</a>
+                    <a style="text-align: center;" href="foodmenu.html">Menu</a>
                   </li>
                   <li>
-                    <a style="text-align: center;color: white;" href="gallery-1.html">Gallery</a>
+                    <a style="text-align: center;" href="gallery-1.html">Gallery</a>
                   </li>
                   <li>
-                    <a style="text-align: center;color: white;" href="contact.html">Contact</a>
+                    <a style="text-align: center;" href="contact.html">Contact</a>
                   </li>
                   <li>
                     <a class="btn" style="background-color: #f14668;color: white;margin: 0 20px;" href="tel:+12093198189" role="button">Order Now</a>
