--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       #slideshow-mobile>div {
         position: absolute;
         width: 100%;
-        height: 70vh;
+        height: auto;
       }
     }
   </style>
