--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
     </div>
   </section>
   <!-- /Hero Area -->
-  <section class="most-popular-food-area">
+  <section class="most-popular-food-area" style="margin-top: 200px">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
