--- a/index.html
+++ b/index.html
@@ -246,6 +246,10 @@
 
   <!-- /Header Area -->
 
+  <div>
+    <img src="./assets/img/home_del.png" style="width: 90px;position: fixed;top: 150px;right: 0;z-index: 999;" alt="">
+  </div>
+
   <!-- Hero Area -->
   <section class="hero-area heroV2">
     <!-- <img
