added float button

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
       display: none;
     }
 
+    
 
     @media (min-width: 320px) and (max-width: 767px) {
       #slideshow {
@@ -247,7 +248,12 @@
   <!-- /Header Area -->
 
   <div>
-    <img src="./assets/img/home_del.png" style="width: 90px;position: fixed;top: 150px;right: 0;z-index: 999;" alt="">
+    <img src="./assets/img/home_del.png" style="margin: 0;
+    position: fixed;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    width: 80px;z-index: 999;" alt="">
   </div>
 
   <!-- Hero Area -->
