--- a/about.html
+++ b/about.html
@@ -65,18 +65,18 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <style>
-      #dfoodyMenu > li > a {
-        color: #f14668;
-      }
-    </style>
+  <style>
+    #dfoodyMenu>li>a {
+      color: #f14668;
+    }
+  </style>
 </head>
 
 <body>
   <!-- <div id="preloader"></div> -->
 
   <!-- Header Area -->
-  <header  class="header-area dfoody-header dfdV2">
+  <header class="header-area dfoody-header dfdV2">
     <div class="dfoody-header-box" style="padding: 0;">
       <div class="container">
         <div class="row">
@@ -90,7 +90,8 @@
           <div class="col-9 col-md-9">
             <div class="gm-box">
               <div class="gmb-contact">
-                <p style="color: #f14668;">Call Now: <a style="color: #f14668;" href="tel:+12093198189">+1(209) 319-8189</a></p>
+                <p style="color: #f14668;">Call Now: <a style="color: #f14668;" href="tel:+12093198189">+1(209)
+                    319-8189</a></p>
               </div>
               <div class="dfoody-menu-wrapper">
                 <!-- Mobile menu toggle button (hamburger/x icon) -->
@@ -116,7 +117,8 @@
                     <a style="text-align: center;" href="contact.html">Contact</a>
                   </li>
                   <li>
-                    <a class="btn" style="background-color: #f14668;color: white;margin: 0 20px;" href="tel:+12093198189" role="button">Order Now</a>
+                    <a class="btn" style="background-color: #f14668;color: white;margin: 0 20px;"
+                      href="tel:+12093198189" role="button">Order Now</a>
                   </li>
                 </ul>
               </div>
@@ -222,8 +224,8 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <div class="testimonial-img aboutp3-img">
-            <img src="assets/img/section-img/about-3.jpg" alt="" />
+          <div class="image">
+            <img src="assets/img/section-img/indian spices.jpg" alt="" />
           </div>
         </div>
         <div class="col-md-6">
