--- a/foodmenu.html
+++ b/foodmenu.html
@@ -68,7 +68,7 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
     <style>
-      #dfoodyMenu > li > a {
+      #dfoodyMenu>li>a {
         color: #f14668;
       }
     </style>
@@ -118,7 +118,8 @@
                     <a style="text-align: center;" href="contact.html">Contact</a>
                   </li>
                   <li>
-                    <a class="btn" style="background-color: #f14668;color: white;margin: 0 20px;" href="tel:+12093198189" role="button">Order Now</a>
+                    <a class="btn" style="background-color: #f14668;color: white;margin: 0 20px;"
+                      href="tel:+12093198189" role="button">Order Now</a>
                   </li>
                 </ul>
               </div>
@@ -222,13 +223,13 @@
   <!-- Delicious Menu -->
   <section class="delicious-menu-area foodmenu-page-wrapper">
     <div class="container">
-      <div class="row">
+      <!-- <div class="row">
         <div class="col-md-12">
           <div class="section-titleV2">
             <h3>Our Delicious Menu</h3>
           </div>
         </div>
-      </div>
+      </div> -->
       <div class="row">
         <div class="col-md-12">
           <div class="dm-food-tab dmftV2">
