--- a/about.html
+++ b/about.html
@@ -224,7 +224,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <div class="image">
+          <div class="about2-img">
             <img src="assets/img/section-img/indian spices.jpg" alt="" />
           </div>
         </div>
