--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <div class="gm-box">
               <div class="gmb-contact">
                 <p>Call Now: <a href="tel:+12093198189">+1(209) 319-8189</a></p>
-                <a href="tel:+12096662771">+1(209) 666-2771</a></p>
+                <p> <a href="tel:+12096662771">+1(209) 666-2771</a></p>
               </div>
               <div class="dfoody-menu-wrapper">
                 <!-- Mobile menu toggle button (hamburger/x icon) -->
