--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <div class="gm-box">
               <div class="gmb-contact">
                 <p>Call Now: <a href="tel:+12093198189">+1(209) 319-8189</a></p>
-                <p> <a href="tel:+12096662771">+1(209) 666-2771</a></p>
+                <!-- <p> <a href="tel:+12096662771">+1(209) 666-2771</a></p> -->
               </div>
               <div class="dfoody-menu-wrapper">
                 <!-- Mobile menu toggle button (hamburger/x icon) -->
@@ -246,14 +246,14 @@
 
   <!-- /Header Area -->
 
-  <div>
+  <!-- <div>
     <img src="./assets/img/home_del.png" style="margin: 0;
     position: fixed;
     top: 50%;
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
+    -ms-transform: translateY(50%);
+    transform: translateY(50%);
     width: 80px;z-index: 999;" alt="">
-  </div>
+  </div> -->
 
   <!-- Hero Area -->
   <section class="hero-area heroV2">
