--- a/contact.html
+++ b/contact.html
@@ -406,24 +406,24 @@
     function initMap() {
       map = new google.maps.Map(document.getElementById("googleMap"), {
         center: {
-          lat: -37.81534,
-          lng: 144.96323,
+          lat: 37.756566,
+          lng: -121.464235,
         },
         zoom: 15,
         scrollwheel: false,
       });
       var marker = new google.maps.Marker({
         position: {
-          lat: -37.81534,
-          lng: 144.96323,
+          lat: 37.756566,
+          lng: -121.464235,
         },
         map: map,
-        title: "Voidcoders",
+        title: "Dosa Biryanizz Chaat Cafe",
       });
     }
   </script>
 
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBI7EiIpx_LqzhrPfrHrJ8GsWhO3CgTFmM&amp;callback=initMap"
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyChuLFeRvqR0o1I6Bcjub5SyL-aAsmbMnw&amp;callback=initMap"
     async defer></script>
 
   <!-- Scripts -->
