--- a/foodmenu.html
+++ b/foodmenu.html
@@ -1225,7 +1225,7 @@
                                   <i class="fa fa-cart-plus" aria-hidden="true" style="font-size: 30px"></i>
                                 </div>
                                 <div class="dfsl-price">
-                                  <h3><span>$</span>10.99</h3>
+                                  <h3><span>$</span>11.99</h3>
                                 </div>
                               </div>
                             </div>
@@ -1244,7 +1244,7 @@
                                   <i class="fa fa-cart-plus" aria-hidden="true" style="font-size: 30px"></i>
                                 </div>
                                 <div class="dfsl-price">
-                                  <h3><span>$</span>11.99</h3>
+                                  <h3><span>$</span>12.99</h3>
                                 </div>
                               </div>
                             </div>
@@ -1255,6 +1255,25 @@
                                 <img src="assets/img/food-menu/mutton.jpeg" class="dft-image" alt="" />
                                 <div class="dftsl-text">
                                   <h4>Mutton Dum Biryani (Fri - Sun)</h4>
+                                  <!--  <p>Bread recipes for snacks or breakfast. </p> -->
+                                </div>
+                              </div>
+                              <div class="dft-row-align-right">
+                                <div>
+                                  <i class="fa fa-cart-plus" aria-hidden="true" style="font-size: 30px"></i>
+                                </div>
+                                <div class="dfsl-price">
+                                  <h3><span>$</span>13.99</h3>
+                                </div>
+                              </div>
+                            </div>
+                          </li>
+                          <li class="nveg">
+                            <div class="dft-single-list">
+                              <div class="dft-row-align-left">
+                                <img src="assets/img/food-menu/mutton.jpeg" class="dft-image" alt="" />
+                                <div class="dftsl-text">
+                                  <h4>Butter Chicken Biryani</h4>
                                   <!--  <p>Bread recipes for snacks or breakfast. </p> -->
                                 </div>
                               </div>
@@ -1282,7 +1301,7 @@
                                   <i class="fa fa-cart-plus" aria-hidden="true" style="font-size: 30px"></i>
                                 </div>
                                 <div class="dfsl-price">
-                                  <h3><span>$</span>12.99</h3>
+                                  <h3><span>$</span>13.99</h3>
                                 </div>
                               </div>
                             </div>
@@ -1339,7 +1358,7 @@
                                   <i class="fa fa-cart-plus" aria-hidden="true" style="font-size: 30px"></i>
                                 </div>
                                 <div class="dfsl-price">
-                                  <h3><span>$</span>9.99</h3>
+                                  <h3><span>$</span>10.99</h3>
                                 </div>
                               </div>
                             </div>
