--- a/index.html
+++ b/index.html
@@ -281,23 +281,23 @@
       </div>
       <div id="slideshow-mobile">
         <div>
-          <img class="himg" src="./assets/slides/chicken  1.jpg" />
+          <img class="himg" src="./assets/slides/dosa-min.jpg" />
         </div>
         <div>
-          <img class="himg" src="./assets/slides/chicken biryani  .jpg" />
+          <img class="himg" src="./assets/slides/leg pieces-min.jpg" />
         </div>
         <div>
-          <img class="himg" src="./assets/slides/curry  design.jpg" />
+          <img class="himg" src="./assets/slides/curry  design-min.jpg" />
         </div>
         <div>
-          <img class="himg" src="./assets/slides/dosa.jpg" />
+          <img class="himg" src="./assets/slides/biryanis-min.jpg" />
         </div>
         <div>
-          <img class="himg" src="./assets/slides/paneer.jpg" />
+          <img class="himg" src="./assets/slides/samosa-min.jpg" />
         </div>
-        <div>
+        <!--- <div>
           <img class="himg" src="./assets/slides/samosa.jpg" />
-        </div>
+        </div> -->
       </div>
       <!-- <div id="slideshow">
           <div class="hero-content">
