--- a/foodmenu.html
+++ b/foodmenu.html
@@ -861,6 +861,25 @@
                               </div>
                             </div>
                           </li>
+                          <li class="veg">
+                            <div class="dft-single-list">
+                              <div class="dft-row-align-left">
+                                <img src="assets/img/food-menu/lunch-1.jpg" class="dft-image" alt="" />
+                                <div class="dftsl-text">
+                                  <h4>Vegetable Cheese dosa</h4>
+                                  <!--  <p>Bread recipes for snacks or breakfast. </p> -->
+                                </div>
+                              </div>
+                              <div class="dft-row-align-right">
+                                <div>
+                                  <i class="fa fa-cart-plus" aria-hidden="true" style="font-size: 30px"></i>
+                                </div>
+                                <div class="dfsl-price">
+                                  <h3><span>$</span>9.99</h3>
+                                </div>
+                              </div>
+                            </div>
+                          </li>
 
                           <li class="veg">
                             <div class="dft-single-list">
@@ -896,7 +915,7 @@
                                   <i class="fa fa-cart-plus" aria-hidden="true" style="font-size: 30px"></i>
                                 </div>
                                 <div class="dfsl-price">
-                                  <h3><span>$</span>8.99</h3>
+                                  <h3><span>$</span>9.99</h3>
                                 </div>
                               </div>
                             </div>
@@ -941,6 +960,27 @@
                               </div>
                             </div>
                           </li>
+
+                          <li class="veg">
+                            <div class="dft-single-list">
+                              <div class="dft-row-align-left">
+                                <img src="assets/img/food-menu/lunch-1.jpg" class="dft-image" alt="" />
+                                <div class="dftsl-text">
+                                  <h4>Vegatable uthappam</h4>
+                                  <!--  <p>Bread recipes for snacks or breakfast. </p> -->
+                                </div>
+                              </div>
+                              <div class="dft-row-align-right">
+                                <div>
+                                  <i class="fa fa-cart-plus" aria-hidden="true" style="font-size: 30px"></i>
+                                </div>
+                                <div class="dfsl-price">
+                                  <h3><span>$</span>8.99</h3>
+                                </div>
+                              </div>
+                            </div>
+                          </li>
+
 
                           <li class="veg">
                             <div class="dft-single-list">
@@ -1187,7 +1227,7 @@
                               <div class="dft-row-align-left">
                                 <img src="assets/img/food-menu/Sambhar.jpg" class="dft-image" alt="" />
                                 <div class="dftsl-text">
-                                  <h4>SambarVada</h4>
+                                  <h4>Vada(03) & Sambar</h4>
                                   <!--  <p>Bread recipes for snacks or breakfast. </p> -->
                                 </div>
                               </div>
@@ -1271,7 +1311,7 @@
                           <li class="nveg">
                             <div class="dft-single-list">
                               <div class="dft-row-align-left">
-                                <img src="assets/img/food-menu/mutton.jpeg" class="dft-image" alt="" />
+                                <img src="assets/img/food-menu/lunch-1.jpg" class="dft-image" alt="" />
                                 <div class="dftsl-text">
                                   <h4>Butter Chicken Biryani</h4>
                                   <!--  <p>Bread recipes for snacks or breakfast. </p> -->
@@ -1328,7 +1368,7 @@
                           <li class="veg">
                             <div class="dft-single-list">
                               <div class="dft-row-align-left">
-                                <img src="assets/img/food-menu/lunch-1.jpg" class="dft-image" alt="" />
+                                <img src="assets/img/food-menu/plain-rice.jpg" class="dft-image" alt="" />
                                 <div class="dftsl-text">
                                   <h4>Plain Rice</h4>
                                   <!--  <p>Bread recipes for snacks or breakfast. </p> -->
@@ -1347,7 +1387,7 @@
                           <li class="veg">
                             <div class="dft-single-list">
                               <div class="dft-row-align-left">
-                                <img src="assets/img/food-menu/lunch-1.jpg" class="dft-image" alt="" />
+                                <img src="assets/img/food-menu/Paneer-Biryani.jpg" class="dft-image" alt="" />
                                 <div class="dftsl-text">
                                   <h4>Paneer Biryani</h4>
                                   <!--  <p>Bread recipes for snacks or breakfast. </p> -->
