--- a/index.html
+++ b/index.html
@@ -963,11 +963,10 @@
                 <div class="single-testimonial">
                   <div class="st-text">
                     <p>
-                      We visited this place for breakfast and dinner. The
-                      place is very conveniently located (on the highway )
-                      with ample parking space. The food at both the meals was
-                      tasty and definitely worth the price. Good quantity
-                      served per portion. Service as also good.
+                      Lots of Vegan and vegetarian options.
+                      Very affordable and authentic Indian street food. One of my favorites in Tracy, I highly recommend
+                      trying them. (They also have chicken and lamb options)
+                      The staff is very polite and helpful.
                     </p>
                     <h4>Thomas Paul <span>Customer</span></h4>
                   </div>
@@ -977,13 +976,11 @@
                 <div class="single-testimonial">
                   <div class="st-text">
                     <p>
-                      We visited this place for breakfast and dinner. The
-                      place is very conveniently located (on the highway )
-                      with ample parking space. The food at both the meals was
-                      tasty and definitely worth the price. Good quantity
-                      served per portion. Service as also good.
+                      We stopped in today for a quick chaat for the first time. I was so excited to see Madras style
+                      filter coffee, freshly made. Every part of our meal was wonderful, but that perfect coffee made my
+                      day. If anyone's trying for the first time, have this coffee with a nice hot dosa. Thanks!
                     </p>
-                    <h4>Thomas Paul <span>Customer</span></h4>
+                    <h4>Rachel Syed <span>Customer</span></h4>
                   </div>
                 </div>
               </div>
@@ -991,13 +988,10 @@
                 <div class="single-testimonial">
                   <div class="st-text">
                     <p>
-                      We visited this place for breakfast and dinner. The
-                      place is very conveniently located (on the highway )
-                      with ample parking space. The food at both the meals was
-                      tasty and definitely worth the price. Good quantity
-                      served per portion. Service as also good.
+                      We ordered food for party , chicken 65 biryani,chapathi,kadai Panner, gulab Jamoon, Samosa all of
+                      them are awesome, everyone one of our guest are so happy with food taste . Thanks Dosa Biryanizz.
                     </p>
-                    <h4>Thomas Paul <span>Customer</span></h4>
+                    <h4>Vara Prasad <span>Customer</span></h4>
                   </div>
                 </div>
               </div>
