--- a/index.html
+++ b/index.html
@@ -267,16 +267,16 @@
     <div>
       <div id="slideshow">
         <div>
-          <img class="himg" src="./assets/slides/sixsai.jpg" />
+          <img class="himg" src="./assets/slides/chicken 65-min.jpg" />
         </div>
         <div>
-          <img class="himg" src="./assets/slides/2a.png" />
+          <img class="himg" src="./assets/slides/biryani-min.jpg" />
         </div>
         <!-- <div>
           <img class="himg" src="./assets/slides/3a.png" />
         </div> -->
         <div>
-          <img class="himg" src="./assets/slides/4a.png" />
+          <img class="himg" src="./assets/slides/3-min.jpg" />
         </div>
       </div>
       <div id="slideshow-mobile">
