--- a/index.html
+++ b/index.html
@@ -1230,7 +1230,7 @@
               <h4>Instagram</h4>
               <ul class="fw-instagram">
                 <li>
-                  <a data-fancybox="gallery" href="assets/img/gallery/insta-1.jpg"><img
+                  <a data-fancybox="gallery" href="assets/img/gallery/dosa.jpg"><img
                       src="assets/img/gallery/insta-1.jpg" alt="" /></a>
                 </li>
                 <li>
