--- a/index.html
+++ b/index.html
@@ -1230,28 +1230,28 @@
               <h4>Instagram</h4>
               <ul class="fw-instagram">
                 <li>
-                  <a data-fancybox="gallery" href="assets/img/gallery/dosa.jpg"><img
-                      src="assets/img/gallery/insta-1.jpg" alt="" /></a>
+                  <a data-fancybox="gallery" href="assets/img/gallery/dosa.jpg"><img src="assets/img/gallery/dosa.jpg"
+                      alt="" /></a>
                 </li>
                 <li>
-                  <a data-fancybox="gallery" href="assets/img/gallery/insta-2.jpg"><img
-                      src="assets/img/gallery/insta-2.jpg" alt="" /></a>
+                  <a data-fancybox="gallery" href="assets/img/gallery/lunch-1.jpg"><img
+                      src="assets/img/gallery/lunch-1.jpg" alt="" /></a>
                 </li>
                 <li>
-                  <a data-fancybox="gallery" href="assets/img/gallery/insta-3.jpg"><img
-                      src="assets/img/gallery/insta-3.jpg" alt="" /></a>
+                  <a data-fancybox="gallery" href="assets/img/gallery/Sambhar.jpg"><img
+                      src="assets/img/gallery/Sambhar.jpg" alt="" /></a>
                 </li>
                 <li>
-                  <a data-fancybox="gallery" href="assets/img/gallery/insta-4.jpg"><img
-                      src="assets/img/gallery/insta-4.jpg" alt="" /></a>
+                  <a data-fancybox="gallery" href="assets/img/gallery/Hero.jpg"><img src="assets/img/gallery/Hero.jpg"
+                      alt="" /></a>
                 </li>
                 <li>
-                  <a data-fancybox="gallery" href="assets/img/gallery/insta-5.jpg"><img
-                      src="assets/img/gallery/insta-5.jpg" alt="" /></a>
+                  <a data-fancybox="gallery" href="assets/img/gallery/gongura chicken.jpg"><img
+                      src="assets/img/gallery/gongura chicken.jpg" alt="" /></a>
                 </li>
                 <li>
-                  <a data-fancybox="gallery" href="assets/img/gallery/insta-6.jpg"><img
-                      src="assets/img/gallery/insta-6.jpg" alt="" /></a>
+                  <a data-fancybox="gallery" href="assets/img/gallery/goatcurry.jpg"><img
+                      src="assets/img/gallery/goatcurry.jpg" alt="" /></a>
                 </li>
               </ul>
             </div>
