--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
           <img class="himg" src="./assets/slides/chicken 65-min.jpg" />
         </div>
         <div>
-          <img class="himg" src="./assets/slides/biryani-min.jpg" />
+          <img class="himg" src="./assets/slides/biryani.3.jpg" />
         </div>
         <!-- <div>
           <img class="himg" src="./assets/slides/3a.png" />
@@ -290,7 +290,7 @@
           <img class="himg" src="./assets/slides/curry  design-min.jpg" />
         </div>
         <div>
-          <img class="himg" src="./assets/slides/biryanis-min.jpg" />
+          <img class="himg" src="./assets/slides/biryanis.3.jpg" />
         </div>
         <div>
           <img class="himg" src="./assets/slides/samosa-min.jpg" />
