--- a/index.html
+++ b/index.html
@@ -272,9 +272,9 @@
         <div>
           <img class="himg" src="./assets/slides/biryani.3.jpg" />
         </div>
-        <!-- <div>
-          <img class="himg" src="./assets/slides/3a.png" />
-        </div> -->
+        <div>
+          <img class="himg" src="./assets/slides/pavbhaji.jpg" />
+        </div>
         <div>
           <img class="himg" src="./assets/slides/3-min.jpg" />
         </div>
