--- a/index.html
+++ b/index.html
@@ -515,6 +515,56 @@
       </div>
     </div>
   </section>
+  </section>
+  <!-- /Hero Area -->
+  <section class="most-popular-food-area">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="section-titleV2">
+            <h3>Our Delivery Partners</h3>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="most-poplar-food-wrappper">
+            <div class="popular-food-carousel owl-carousel owl-theme">
+              <div class="item">
+                <div class="single-food-box">
+                  <div class="sfb-img">
+                    <img src="assets/img/food-menu/dosa.jpg" alt="" />
+                    <div class="sfbi-btn">
+                      <a href="#" class="add-cart-btn">Order Now</a>
+                    </div>
+                  </div>
+                  <div class="sbf-info">
+                    <h4>Grub Hub</h4>
+                  </div>
+                </div>
+              </div>
+              <div class="item">
+                <div class="single-food-box">
+                  <div class="sfb-img">
+                    <img src="assets/img/food-menu/Chicken.jpg" alt="" />
+                    <div class="sfbi-btn">
+                      <a href="#" class="add-cart-btn">Order Now</a>
+                    </div>
+                  </div>
+                  <div class="sbf-info">
+                    <h4>Uber Eats</h4>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
+    </div>
+  </section>
   <!-- /Most Popular Food Area -->
   <!-- About Area -->
   <section class="about2-area">
