--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
               <div class="item">
                 <div class="single-food-box">
                   <div class="sfb-img">
-                    <img src="assets/img/food-menu/dosa.jpg" alt="" />
+                    <img src="assets/img/food-menu/grubhub.jpg" alt="" />
                     <div class="sfbi-btn">
                       <a href="#" class="add-cart-btn">Order Now</a>
                     </div>
@@ -546,13 +546,26 @@
               <div class="item">
                 <div class="single-food-box">
                   <div class="sfb-img">
-                    <img src="assets/img/food-menu/Chicken.jpg" alt="" />
+                    <img src="assets/img/food-menu/ubereats.png" alt="" />
                     <div class="sfbi-btn">
                       <a href="#" class="add-cart-btn">Order Now</a>
                     </div>
                   </div>
                   <div class="sbf-info">
                     <h4>Uber Eats</h4>
+                  </div>
+                </div>
+              </div>
+              <div class="item">
+                <div class="single-food-box">
+                  <div class="sfb-img">
+                    <img src="assets/img/food-menu/doordash.png" alt="" />
+                    <div class="sfbi-btn">
+                      <a href="#" class="add-cart-btn">Order Now</a>
+                    </div>
+                  </div>
+                  <div class="sbf-info">
+                    <h4>Door Dash</h4>
                   </div>
                 </div>
               </div>
